// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LiteratureSelectAll > render unchecked if all publications are not part of the selection 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-mncuj7"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`LiteratureSelectAll > renders checked if all publications are part of the selection 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-mncuj7 ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </label>
</DocumentFragment>
`;
